# lizardgraphics

./: .gitignore  .gitmodules  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Doxyfile  LApp.h  LBuffer.cpp  LError.cpp  LIButton.cpp  LICENSE  LIRectangle.cpp  LLine.cpp  LMessageBox.cpp  LMessageBox.h  LRectangleBuffer.cpp  LRectangleShape.cpp  LResourceManager.cpp  LResourceManager.h  LScroller.cpp  LShape.h  LSurface.h  LText.h  LTextBuffer.cpp  LTextBuffer.h  LTextEdit.cpp  LTextEdit.h  LWRectangle.cpp  LWidget.h  LizardGraphics.h  Lshaders.h  README.md  __features_8hpp_source.html  __fixes_8hpp_source.html  __noise_8hpp_source.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp_source.html  _atlas_generator_8h_source.html  _code_gen_8h_source.html  (+7222 more)
.github/workflows/: codeql-analysis.yml
LizardGraphics/: AtlasGenerator.cpp  AtlasGenerator.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  FileSystemDialog.cpp  FileSystemDialog.h  LAnimation.cpp  LAnimation.h  LApp.cpp  LApp.h  LBaseComponent.cpp  LBaseComponent.h  LBuffer.cpp  LBuffer.h  LCircle.cpp  LCircle.h  LColorBar.cpp  LColorBar.h  LCone.cpp  LCone.h  LCounter.cpp  LCounter.h  LCube.cpp  LCube.h  LCubeBuffer.cpp  LCubeBuffer.h  LCylinder.cpp  LCylinder.h  LError.cpp  LError.h  LFlag.cpp  LFlag.h  LIButton.cpp  LIButton.h  LIRectangle.cpp  LIRectangle.h  LIWidget.cpp  LIWidget.h  LIcosphere.cpp  (+92 more)
LizardGraphics/include/gl/: glad.h
LizardGraphics/libs/: CMakeLists.txt  README.txt  glfw3dll.lib  vulkan-1.lib
LizardGraphics/shaders/: Vk_litobjF.frag  Vk_litobjV.vert  base.frag  base.fs  base.tesc  base.tese  base.vs  baseMirror.frag  model.vert  model.vs  picking.frag  pickingModel.vert  pickingPrimitive.vert  primitive.frag  primitive.tesc  primitive.tese  primitive.vert  reflex.frag  reflex.geom  reflex_model.vert  reflex_primitive.vert  shadow.fs  shadowCubeMap.frag  shadowCubeMap.geom  shadowCubeMap.vert  shadowCubeMapModel.vert  shadowMap.frag  shadowMap.vert  shadowMap.vs  shadowMapModel.vert  shadowMapModel.vs  shadows.frag  shadows.fs  shadows.vert  shadows.vs  skybox.fs  skybox.vert  skybox.vs
LizardGraphics/shaders/deferred/: base.frag  lighting.frag  postprocessing.frag  quad.vert
Optimized/: CMakeLists.txt  optimized.cpp  optimized.h
SDL2/: SDL2ConfigVersion.cmake  cmake_uninstall.cmake
build64/LizardGraphics/: LBaseComponent.cpp  LBaseComponent.h  additional.cpp  additional.h
html/: _l_app_8h_source.html  _l_base_component_8h_source.html  _l_buffer_8h_source.html  _l_error_8h_source.html  _l_i_button_8h_source.html  _l_i_rectangle_8h_source.html  _l_image_8h_source.html  _l_object_8h_source.html  _l_rectangle_buffer_8h_source.html  _l_rectangle_shape_8h_source.html  _l_shape_8h_source.html  _l_symbol_8h_source.html  _l_text_buffer_8h_source.html  _l_text_edit_8h_source.html  _l_widget_i_8h_source.html  _lshaders_8h_source.html  _s_o_i_l2_8h_source.html  additional_8h_source.html  annotated.html  class_d_a_t_a.html  class_l_graphics_1_1_l_app-members.html  class_l_graphics_1_1_l_app.html  class_l_graphics_1_1_l_base_component-members.html  class_l_graphics_1_1_l_base_component.html  class_l_graphics_1_1_l_buffer-members.html  class_l_graphics_1_1_l_buffer.html  class_l_graphics_1_1_l_error-members.html  class_l_graphics_1_1_l_error.html  class_l_graphics_1_1_l_i_button-members.html  class_l_graphics_1_1_l_i_button.html  class_l_graphics_1_1_l_i_rectangle-members.html  class_l_graphics_1_1_l_i_rectangle.html  class_l_graphics_1_1_l_image-members.html  class_l_graphics_1_1_l_image.html  class_l_graphics_1_1_l_object-members.html  class_l_graphics_1_1_l_object.html  class_l_graphics_1_1_l_rectangle_buffer-members.html  class_l_graphics_1_1_l_rectangle_buffer.html  class_l_graphics_1_1_l_rectangle_shape-members.html  class_l_graphics_1_1_l_rectangle_shape.html  (+162 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  (+42 more)
latex/: annotated.tex  class_d_a_t_a.eps  class_d_a_t_a.tex  class_l_graphics_1_1_l_app.eps  class_l_graphics_1_1_l_app.tex  class_l_graphics_1_1_l_base_component.eps  class_l_graphics_1_1_l_base_component.tex  class_l_graphics_1_1_l_buffer.eps  class_l_graphics_1_1_l_buffer.tex  class_l_graphics_1_1_l_error.eps  class_l_graphics_1_1_l_error.tex  class_l_graphics_1_1_l_i_button.eps  class_l_graphics_1_1_l_i_button.tex  class_l_graphics_1_1_l_i_rectangle.eps  class_l_graphics_1_1_l_i_rectangle.tex  class_l_graphics_1_1_l_image.eps  class_l_graphics_1_1_l_image.tex  class_l_graphics_1_1_l_object.eps  class_l_graphics_1_1_l_object.tex  class_l_graphics_1_1_l_rectangle_buffer.eps  class_l_graphics_1_1_l_rectangle_buffer.tex  class_l_graphics_1_1_l_rectangle_shape.eps  class_l_graphics_1_1_l_rectangle_shape.tex  class_l_graphics_1_1_l_shape.eps  class_l_graphics_1_1_l_shape.tex  class_l_graphics_1_1_l_symbol.tex  class_l_graphics_1_1_l_text.tex  class_l_graphics_1_1_l_text_buffer.eps  class_l_graphics_1_1_l_text_buffer.tex  class_l_graphics_1_1_l_text_edit.eps  class_l_graphics_1_1_l_text_edit.tex  class_l_graphics_1_1_l_widget_i.eps  class_l_graphics_1_1_l_widget_i.tex  class_l_shaders_1_1_shader.tex  class_l_timer.tex  class_parent.tex  files.tex  glfw3_8h.tex  group__buttons.tex  group__context.tex  (+102 more)
libs/: README.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+131 more)
shaders/: Vk_interfaceF.frag  Vk_interfaceF.spv  Vk_interfaceV.spv  Vk_interfaceV.vert  Vk_litobjF.frag  Vk_litobjV.vert  Vk_objF.frag  Vk_objV.vert  base.fs  baseMirror.vs  shadowMap.vs
